# rust-c-asm

./: .gitignore  CONTRIBUITING.md  DOCUMENTATION.md  LICENSE  README.md  package-lock.json
asm-cli/: Cargo.toml
asm_cli/: Cargo.toml
asm_cli/programs/: arithmetic_test.arc  bitwise_test.arc  compare_test.arc  directives_test.arc  empty.arc  hello_test.arc  io_test.arc  moves_test.arc  system_test.arc  test.arc
asm_cli/src/: chips.rs  instructions.rs  lib.rs  main.rs  memory.rs
asm_cli/src/chips/: alu.rs  call_stack.rs  cpu.rs  crom.rs  instruction_queue.rs  io_device.rs  mmu.rs  mod.rs
asm_cli/src/instructions/: aritmethic.rs  bit_logic.rs  bitwise.rs  compare.rs  control.rs  io.rs  mod.rs  moves.rs  system.rs
asm_cli/src/instructions/aritmethic/: add.rs  dec.rs  inc.rs  mod.rs  mul.rs  neg.rs  sub.rs
asm_cli/src/instructions/bit_logic/: and.rs  mod.rs  not.rs  or.rs  xor.rs
asm_cli/src/instructions/compare/: mod.rs
asm_cli/src/instructions/moves/: mod.rs  mov.rs  pop.rs  push.rs  xchg.rs
asm_cli/src/memory/: main_memory.rs  mod.rs  registers.rs
asm_cli/src/utils/: buffers.rs  command_processor.rs  logger.rs  mod.rs  operands.rs  symbols.rs  tui.rs  widgets.rs  workspaces.rs
asm_cli/src/utils/apps/: editor.rs  emulator.rs  file_explorer.rs  help_content.rs  help_guide.rs  io_devices.rs  mod.rs  settings.rs  start_menu.rs
asm_cli/src/utils/assembler/: command_processor.rs  mod.rs  operands.rs  symbols.rs
asm_cli/src/utils/config/: app_config.rs  config_manager.rs  mod.rs
asm_cli/src/utils/ui/: common.rs  display.rs  mod.rs  resources.rs
(+6 files in other folders)
